# alfred-pinboard-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  DISABLE.appveyor.yml  LICENSE.md  README.md  appveyor.yml  create_alfred_workflow.sh  disable-travis  get-current-url.applescript
.circleci/: before_deploy.sh  config.yml  deploy.sh  script.sh
.circleci-disabled/: config.yml  deploy.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  lint.yml  macos-universal.yml  run_tests.sh  run_tests_win.bat  script.sh  test.yml  windows.yml
ci/: before_deploy.sh  script.sh
firefox-helper/add-on/: background.js  manifest.json
firefox-helper/app/: alfred_pinboard_rs.json  alfred_pinboard_rs.py
res/: fix_cargo_version.py
res/workflow/: erroricon.icns  f.txt  foo.txt  get-current-url-from-alfred-firefox.sh  get-current-url.applescript  get-current-url.applescript.bak  identify-browser.applescript  info.plist  pinboard-pin.icns  qutebrowser-info.sh
src/: cli.rs  commands.rs  config.rs  main.rs  runners.rs  workflow_config.rs
src/commands/: browser_info.rs  config.rs  delete.rs  list.rs  mod.rs  post.rs  rename.rs  search.rs  update.rs  upgrade.rs
src/runners/: browser_info.rs  config.rs  list.rs  mod.rs  post.rs  search.rs  update.rs
